@@ -55,7 +55,7 @@ class DgramSocketTransport(AbstractSocketTransport):
 
     def normalizeAddress(self, transportAddress): return transportAddress
 
-    def __getsockname(self):
+    def getLocalAddress(self):
         # one evil OS does not seem to support getsockname() for DGRAM sockets
         try:
             return self.socket.getsockname()
@@ -67,7 +67,7 @@ class DgramSocketTransport(AbstractSocketTransport):
     def writable(self): return self.__outQueue
     def handle_write(self):
         outgoingMessage, transportAddress = self.__outQueue.pop(0)
-        debug.logger & debug.flagIO and debug.logger('handle_write: transportAddress %r -> %r outgoingMessage (%d octets) %s' % (self.__getsockname(), transportAddress, len(outgoingMessage), debug.hexdump(outgoingMessage)))
+        debug.logger & debug.flagIO and debug.logger('handle_write: transportAddress %r -> %r outgoingMessage (%d octets) %s' % (self.getLocalAddress(), transportAddress, len(outgoingMessage), debug.hexdump(outgoingMessage)))
         if not transportAddress:
             debug.logger & debug.flagIO and debug.logger('handle_write: missing dst address, loosing outgoing msg')
             return
@@ -84,7 +84,7 @@ class DgramSocketTransport(AbstractSocketTransport):
         try:
             incomingMessage, transportAddress = self.socket.recvfrom(65535)
             transportAddress = self.normalizeAddress(transportAddress)
-            debug.logger & debug.flagIO and debug.logger('handle_read: transportAddress %r -> %r incomingMessage (%d octets) %s' % (transportAddress, self.__getsockname(), len(incomingMessage), debug.hexdump(incomingMessage)))
+            debug.logger & debug.flagIO and debug.logger('handle_read: transportAddress %r -> %r incomingMessage (%d octets) %s' % (transportAddress, self.getLocalAddress(), len(incomingMessage), debug.hexdump(incomingMessage)))
             if not incomingMessage:
                 self.handle_close()
                 return
