@@ -30,6 +30,8 @@ Revision 4.2.6rc0
 - Example script on SNMP Agents UDP broadcast-based discovery added.
 - Oneliner transport object now supports setLocalAddress() method to
   force socket binding to specified local interface.
+- New public DgramSocketTransport.getLocalAddress() returns local endpoint
+  address underlying BSD socket is currently bound to.
 - Fix to rfc1902.Bits type to make it accepting hex and binary initializers,
   cope with missing bits identifieirs at prettyPrint().
 - Memory leak fixed in CommandForwarder examples.
